force-app/main/default/objects/Account/fields/bjknjk__c.field-meta.xml
<CustomField>
    <fullName>bjknjk__c</fullName>
    <label>bjknjk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>