force-app/main/default/objects/Account/fields/ddddd__c.field-meta.xml
<CustomField>
    <fullName>ddddd__c</fullName>
    <label>ddddd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>