force-app/main/default/objects/Account/fields/dss__c.field-meta.xml
<CustomField>
    <fullName>dss__c</fullName>
    <label>dss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>