force-app/main/default/objects/Account/fields/lkl__c.field-meta.xml
<CustomField>
    <fullName>lkl__c</fullName>
    <label>lkl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>