force-app/main/default/objects/Account/fields/qqqq__c.field-meta.xml
<CustomField>
    <fullName>qqqq__c</fullName>
    <label>qqqq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>