force-app/main/default/objects/Account/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <label>temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>