force-app/main/default/objects/Account/fields/test11111__c.field-meta.xml
<CustomField>
    <fullName>test11111__c</fullName>
    <label>test11111</label>
    <length>255</length>
    <type>Text</type>
</CustomField>